school day stuff. pulling most recent master

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,18 @@ header{
 
 #cuisines, #location, #pricePoint{
 	width: 550px;
+	display: flex;
+	flex-direction: column;
+
+}
+
+.prompt{
+	text-align: center;
+}
+
+.prompt h1{
+	font-size: 25px;
+	margin: 20px;
 }
 
 #elimination-list{
