--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,9 +122,18 @@ form{
 	flex-direction: column;
 
 
-	background-color: #ff9319;
+/*	background-color: #ff9319;
 	padding: 100px;
+	border-radius: 20px*/
+}
+
+#locationInfo{
+	display: flex;
+	flex-direction: column;
+	background-color: #ff9319;
+	padding: 25px;
 	border-radius: 20px
+
 }
 
 
@@ -136,14 +145,71 @@ form{
 
 }
 
+#cuisinesInfo{
+		display: flex;
+		flex-direction: column;
+		background-color: #E1F5C4;
+		padding: 25px;
+		border-radius: 20px;
+}
+
+
+#priceInfo{
+		display: flex;
+		flex-direction: column;
+		background-color: #ff9319;
+		padding: 25px;
+		border-radius: 20px;
+
+}
+
+#dollaSigns{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		width: 100%;
+}
 
 .prompt{
 	text-align: center;
-	font-size: 25px;
+	font-size: 35px;
+	font-family: 'Fjalla One', sans-serif;
+	color: #E1F5C4;
+	text-shadow: 2px 2px #6d4532;
+
 	/*margin: 20px;*/
 	/*align-self: flex-start;*/
 }
 
+.promptAlt{
+	text-align: center;
+	font-size: 35px;
+	font-family: 'Fjalla One', sans-serif;
+	color: #ff9319;
+	text-shadow: 2px 2px #6d4532;
+}
+
+#howMuch{
+	display: flex;
+	flex-direction: column;
+}
+
+#priceInfo ul{
+	padding: 20px;
+}
+
+#dollaSigns li{
+	font-family: 'Fjalla One', sans-serif;
+	color: #ff9319;
+	font-size: 25px;
+	padding: 15px;
+	background-color: #E1F5C4;
+	border-radius: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #6d4532;
+}
 
 #elimination-list{
 	display: flex;
@@ -152,7 +218,7 @@ form{
 	justify-content: space-between;
 	align-items: center;
 	font-family: 'Raleway', sans-serif;
-	background-color: #E1F5C4;
+	/*background-color: #E1F5C4;*/
 	border-radius: 5px;
 	height: 250px;
 	padding: 15px;
