--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,26 @@ form{
 	border-radius: 20px*/
 }
 
+.prompt{
+	text-align: center;
+	font-size: 35px;
+	font-family: 'Fjalla One', sans-serif;
+	color: #E1F5C4;
+	text-shadow: 2px 2px #6d4532;
+
+	/*margin: 20px;*/
+	/*align-self: flex-start;*/
+}
+
+.promptAlt{
+	text-align: center;
+	font-size: 35px;
+	font-family: 'Fjalla One', sans-serif;
+	color: #ff9319;
+	text-shadow: 2px 2px #6d4532;
+}
+
+
 #locationInfo{
 	display: flex;
 	flex-direction: column;
@@ -151,64 +171,6 @@ form{
 		background-color: #E1F5C4;
 		padding: 25px;
 		border-radius: 20px;
-}
-
-
-#priceInfo{
-		display: flex;
-		flex-direction: column;
-		background-color: #ff9319;
-		padding: 25px;
-		border-radius: 20px;
-
-}
-
-#dollaSigns{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		width: 100%;
-}
-
-.prompt{
-	text-align: center;
-	font-size: 35px;
-	font-family: 'Fjalla One', sans-serif;
-	color: #E1F5C4;
-	text-shadow: 2px 2px #6d4532;
-
-	/*margin: 20px;*/
-	/*align-self: flex-start;*/
-}
-
-.promptAlt{
-	text-align: center;
-	font-size: 35px;
-	font-family: 'Fjalla One', sans-serif;
-	color: #ff9319;
-	text-shadow: 2px 2px #6d4532;
-}
-
-#howMuch{
-	display: flex;
-	flex-direction: column;
-}
-
-#priceInfo ul{
-	padding: 20px;
-}
-
-#dollaSigns li{
-	font-family: 'Fjalla One', sans-serif;
-	color: #ff9319;
-	font-size: 25px;
-	padding: 15px;
-	background-color: #E1F5C4;
-	border-radius: 15px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #6d4532;
 }
 
 #elimination-list{
@@ -244,6 +206,79 @@ form{
 	border-width: 1px;
 	border-color: #6d4532;
 
+}
+
+
+
+
+#howMuch{
+	display: flex;
+	flex-direction: column;
+}
+
+
+#priceInfo{
+		display: flex;
+		flex-direction: column;
+		background-color: #ff9319;
+		padding: 25px;
+		border-radius: 20px;
+
+}
+
+#dollaSigns{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		width: 100%;
+}
+
+#priceInfo ul{
+	padding: 20px;
+}
+
+#dollaSigns li{
+	font-family: 'Fjalla One', sans-serif;
+	color: #ff9319;
+	font-size: 25px;
+	padding: 15px;
+	background-color: #E1F5C4;
+	border-radius: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #6d4532;
+}
+
+#resultsInfo{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	margin-top: 15px;
+
+}
+#result1{
+	width: 33.333%;
+	height: 500px;
+	background-color: #ff9319;
+	margin: 25px;
+	border-radius: 35px;
+}
+
+#result2{
+	width: 33.333%;
+	height: 500px;
+	background-color: white;
+	margin: 25px;
+	border-radius: 35px;
+}
+
+#result3{
+	width: 33.333%;
+	height: 500px;
+	background-color: #ff9319;
+	margin: 25px;
+	border-radius: 35px;
 }
 
 /*.grumbleHeader{
