added some sizing for the reults and changed the name of a few of the cuisine list items.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,19 @@ form{
 	border-radius: 35px;
 }
 
+.restaurant-image{
+	height: 300px;
+	width: 400px;
+	border: 3px solid black;
+}
+
+.restaurant-title,
+.restaurant-price,
+.restaurant-rating{
+	text-align: center;
+	
+}
+
 /*.grumbleHeader{
 	background-color: #FC913A;
 }*/
