--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header{
 	display: flex;
 	align-items: center;
 	height: 60px;
-	background-color: #ff9319;
+	background-color: #FC913A;
 
 }
 
@@ -28,8 +28,8 @@ header{
 .logo{
 	 font-family: 'escafinahigh';
 	font-size:45px;
-	background-color: #ff9319;
-	color: #E1F5C4;
+	background-color: #FC913A;
+	color: #f3ffe2;
 	text-shadow: 2px 2px #6d4532;
 	padding-left: 20px;
 
@@ -38,7 +38,7 @@ header{
 
 .tagline {
 	font-family: 'Fjalla One', sans-serif;
-	color: #E1F5C4;
+	color: #f3ffe2;
 	font-size: 22px;
 	text-shadow: 2px 2px #6d4532;
 	/*align-content: center;
@@ -75,7 +75,7 @@ header{
 	display: flex;
 	flex-direction: column;
 
-	background-color: #ff9319;
+	background-color: #FC913A;
 	/*justify-content: center;
 	align-items: center;*/
 	border-radius: 50px;
@@ -84,7 +84,7 @@ header{
 
 
 	font-family: 'Fjalla One', sans-serif;
-	color: #E1F5C4;
+	color: #f3ffe2;
 	text-shadow: 2px 2px #6d4532;
 	font-size: 35px;
 	padding: 15px;
@@ -122,16 +122,83 @@ form{
 	flex-direction: column;
 
 
-/*	background-color: #ff9319;
+/*	background-color: #FC913A;
 	padding: 100px;
 	border-radius: 20px*/
+}
+
+label{
+	font-weight: bold;
+	font-size: 20px;
+	
+	color: #6d4532;
+}
+
+button{
+	font-family: 'Fjalla One', sans-serif;
+	font-size: 26px
+	
+	
+}
+
+.buttons{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+/*	align-items: flex-start;*/
+}
+
+
+.btn-submit{
+	background: none;
+	background-color: #f3ffe2;
+	border-width: 1.5px;
+	border-style: solid;
+	border-color: #FC913A;
+	color: #FC913A;
+	width: 100px;
+	border-radius: 35px;
+	
+
+}
+
+
+
+.btn-submit:hover, 
+.btn-submit:active,
+.btn-submit:focus,
+.btn-submit:visited	{
+
+		color: #FC913A;
+		background-color: #FC913A;
+		border-color: #FC913A;
+
+}
+
+.btn-submit-alt{
+	background: none;
+	border-width: 1.5px;
+	border-style: solid;
+	background-color: #FC913A;
+	color: #f3ffe2;
+}
+
+.btn-submit-alt:hover, 
+.btn-submit-alt:active,
+.btn-submit-alt:focus,
+.btn-submi-alt:visited	{
+
+		color: #f3ffe2;
+		background-color: #f3ffe2;
+		border-color: #f3ffe2;
+
 }
 
 .prompt{
 	text-align: center;
 	font-size: 35px;
 	font-family: 'Fjalla One', sans-serif;
-	color: #E1F5C4;
+	color: #f3ffe2;
 	text-shadow: 2px 2px #6d4532;
 
 	/*margin: 20px;*/
@@ -142,15 +209,32 @@ form{
 	text-align: center;
 	font-size: 35px;
 	font-family: 'Fjalla One', sans-serif;
-	color: #ff9319;
+	color: #FC913A;
 	text-shadow: 2px 2px #6d4532;
 }
 
+#cuisinesInfo h2{
+	text-align: center;
+	font-weight: bold;
+	font-size: 25px;
+	padding-top: 10px;
+	color: #6d4532;
+}
+
+#priceInfo h2{
+	text-align: center;
+	font-weight: bold;
+	font-size: 25px;
+	padding-top: 10px;
+	color: #6d4532;
+
+
+}
 
 #locationInfo{
 	display: flex;
 	flex-direction: column;
-	background-color: #ff9319;
+	background-color: #FC913A;
 	padding: 25px;
 	border-radius: 20px
 
@@ -168,7 +252,7 @@ form{
 #cuisinesInfo{
 		display: flex;
 		flex-direction: column;
-		background-color: #E1F5C4;
+		background-color: #f3ffe2;
 		padding: 25px;
 		border-radius: 20px;
 }
@@ -180,7 +264,7 @@ form{
 	justify-content: space-between;
 	align-items: center;
 	font-family: 'Raleway', sans-serif;
-	/*background-color: #E1F5C4;*/
+	/*background-color: #f3ffe2;*/
 	border-radius: 5px;
 	height: 250px;
 	padding: 15px;
@@ -198,14 +282,24 @@ form{
 	padding: 10px 5px;
 	width: 100px;
 	height: 100px;
-	background-color: #ff9319;
+	
 	border-radius: 35px;
 	text-align: center;
-	color: #E1F5C4;
+	
 	border-style: solid;
 	border-width: 1px;
 	border-color: #6d4532;
 
+}
+
+.picked{
+	background-color: #FC913A;
+	color: #f3ffe2;
+}
+
+.unpicked{
+	background-color: #f3ffe2;
+	color: #FC913A;
 }
 
 
@@ -220,7 +314,7 @@ form{
 #priceInfo{
 		display: flex;
 		flex-direction: column;
-		background-color: #ff9319;
+		background-color: #FC913A;
 		padding: 25px;
 		border-radius: 20px;
 
@@ -240,10 +334,10 @@ form{
 
 #dollaSigns li{
 	font-family: 'Fjalla One', sans-serif;
-	color: #ff9319;
+	
 	font-size: 25px;
 	padding: 15px;
-	background-color: #E1F5C4;
+	
 	border-radius: 15px;
 	border-style: solid;
 	border-width: 1px;
@@ -257,43 +351,488 @@ form{
 	margin-top: 15px;
 
 }
+
+#resultsInfo div {
+	display: flex;
+	height: 525px;
+
+	
+
+}
 #result1{
-	width: 33.333%;
-	height: 500px;
-	background-color: #ff9319;
-	margin: 25px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+	background-color: #f3ffe2;
+	margin: 10px;
 	border-radius: 35px;
 }
 
 #result2{
-	width: 33.333%;
-	height: 500px;
-	background-color: white;
-	margin: 25px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+	background-color: #f3ffe2;
+	margin: 10px;
 	border-radius: 35px;
 }
 
 #result3{
-	width: 33.333%;
-	height: 500px;
-	background-color: #ff9319;
-	margin: 25px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+	background-color: #f3ffe2;
+	margin: 10px;
 	border-radius: 35px;
 }
 
 .restaurant-image{
-	height: 300px;
-	width: 400px;
-	border: 3px solid black;
+	width: 100%;
+	height: auto;
+	margin-top: 40px;
+	
+	/*border: 3px solid black;*/
 }
 
 .restaurant-title,
 .restaurant-price,
 .restaurant-rating{
 	text-align: center;
+	padding: 10px 0px 10px 0px;
+	color: #6d4532;
 	
 }
+
+.restaurant-title{
+	font-size: 25px;
+	font-weight: bold;
+}
+
+/* entire container, keeps perspective */
+
+.flip-container {
+	perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+/* flip the pane when hovered */
+
+.flip-container, .front, .back {
+	width: 33.333%;
+	height: 525px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back{
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
 
 /*.grumbleHeader{
 	background-color: #FC913A;
 }*/
+
+
+/*
+*******************************BOOTSTRAP BUTTONS*********************
+*/
+
+.btn {
+
+	width: 100px;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+.btn:hover,
+.btn:focus {
+  color: #333;
+  text-decoration: none;
+}
+.btn:active,
+.btn.active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+.btn.disabled,
+.btn[disabled],
+fieldset[disabled] .btn {  
+  pointer-events: none;
+  cursor: not-allowed;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  opacity: .65;
+}
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active,
+.open .dropdown-toggle.btn-default {
+  color: #333;
+  background-color: #ebebeb;
+  border-color: #adadad;
+}
+.btn-default:active,
+.btn-default.active,
+.open .dropdown-toggle.btn-default {
+  background-image: none;
+}
+.btn-default.disabled,
+.btn-default[disabled],
+fieldset[disabled] .btn-default,  
+.btn-default.disabled:hover,
+.btn-default[disabled]:hover,
+fieldset[disabled] .btn-default:hover,  
+.btn-default.disabled:focus,
+.btn-default[disabled]:focus,
+fieldset[disabled] .btn-default:focus,  
+.btn-default.disabled:active,
+.btn-default[disabled]:active,
+fieldset[disabled] .btn-default:active,  
+.btn-default.disabled.active,
+.btn-default[disabled].active,
+fieldset[disabled] .btn-default.active {  
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-default .badge {
+  color: #fff;
+  background-color: #333;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #428bca;
+  border-color: #357ebd;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #3276b1;
+  border-color: #285e8e;
+}
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  background-image: none;
+}
+.btn-primary.disabled,
+.btn-primary[disabled],
+fieldset[disabled] .btn-primary,  
+.btn-primary.disabled:hover,
+.btn-primary[disabled]:hover,
+fieldset[disabled] .btn-primary:hover,  
+.btn-primary.disabled:focus,
+.btn-primary[disabled]:focus,
+fieldset[disabled] .btn-primary:focus,  
+.btn-primary.disabled:active,
+.btn-primary[disabled]:active,
+fieldset[disabled] .btn-primary:active,  
+.btn-primary.disabled.active,
+.btn-primary[disabled].active,
+fieldset[disabled] .btn-primary.active {  
+  background-color: #428bca;
+  border-color: #357ebd;
+}
+.btn-primary .badge {
+  color: #428bca;
+  background-color: #fff;
+}
+.btn-success {
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active,
+.btn-success.active,
+.open .dropdown-toggle.btn-success {
+  color: #fff;
+  background-color: #47a447;
+  border-color: #398439;
+}
+.btn-success:active,
+.btn-success.active,
+.open .dropdown-toggle.btn-success {
+  background-image: none;
+}
+.btn-success.disabled,
+.btn-success[disabled],
+fieldset[disabled] .btn-success,  
+.btn-success.disabled:hover,
+.btn-success[disabled]:hover,
+fieldset[disabled] .btn-success:hover,  
+.btn-success.disabled:focus,
+.btn-success[disabled]:focus,
+fieldset[disabled] .btn-success:focus,  
+.btn-success.disabled:active,
+.btn-success[disabled]:active,
+fieldset[disabled] .btn-success:active,  
+.btn-success.disabled.active,
+.btn-success[disabled].active,
+fieldset[disabled] .btn-success.active {  
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+.btn-success .badge {
+  color: #5cb85c;
+  background-color: #fff;
+}
+.btn-info {
+  color: #fff;
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+.btn-info:hover,
+.btn-info:focus,
+.btn-info:active,
+.btn-info.active,
+.open .dropdown-toggle.btn-info {
+  color: #fff;
+  background-color: #39b3d7;
+  border-color: #269abc;
+}
+.btn-info:active,
+.btn-info.active,
+.open .dropdown-toggle.btn-info {
+  background-image: none;
+}
+.btn-info.disabled,
+.btn-info[disabled],
+fieldset[disabled] .btn-info,  
+.btn-info.disabled:hover,
+.btn-info[disabled]:hover,
+fieldset[disabled] .btn-info:hover,  
+.btn-info.disabled:focus,
+.btn-info[disabled]:focus,
+fieldset[disabled] .btn-info:focus,  
+.btn-info.disabled:active,
+.btn-info[disabled]:active,
+fieldset[disabled] .btn-info:active,  
+.btn-info.disabled.active,
+.btn-info[disabled].active,
+fieldset[disabled] .btn-info.active {  
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+.btn-info .badge {
+  color: #5bc0de;
+  background-color: #fff;
+}
+.btn-warning {
+  color: #fff;
+  background-color: #f0ad4e;
+  border-color: #eea236;
+}
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active,
+.btn-warning.active,
+.open .dropdown-toggle.btn-warning {
+  color: #fff;
+  background-color: #ed9c28;
+  border-color: #d58512;
+}
+.btn-warning:active,
+.btn-warning.active,
+.open .dropdown-toggle.btn-warning {
+  background-image: none;
+}
+.btn-warning.disabled,
+.btn-warning[disabled],
+fieldset[disabled] .btn-warning,  
+.btn-warning.disabled:hover,
+.btn-warning[disabled]:hover,
+fieldset[disabled] .btn-warning:hover,  
+.btn-warning.disabled:focus,
+.btn-warning[disabled]:focus,
+fieldset[disabled] .btn-warning:focus,  
+.btn-warning.disabled:active,
+.btn-warning[disabled]:active,
+fieldset[disabled] .btn-warning:active,  
+.btn-warning.disabled.active,
+.btn-warning[disabled].active,
+fieldset[disabled] .btn-warning.active {  
+  background-color: #f0ad4e;
+  border-color: #eea236;
+}
+.btn-warning .badge {
+  color: #f0ad4e;
+  background-color: #fff;
+}
+.btn-danger {
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+.btn-danger:hover,
+.btn-danger:focus,
+.btn-danger:active,
+.btn-danger.active,
+.open .dropdown-toggle.btn-danger {
+  color: #fff;
+  background-color: #d2322d;
+  border-color: #ac2925;
+}
+.btn-danger:active,
+.btn-danger.active,
+.open .dropdown-toggle.btn-danger {
+  background-image: none;
+}
+.btn-danger.disabled,
+.btn-danger[disabled],
+fieldset[disabled] .btn-danger,  
+.btn-danger.disabled:hover,
+.btn-danger[disabled]:hover,
+fieldset[disabled] .btn-danger:hover,  
+.btn-danger.disabled:focus,
+.btn-danger[disabled]:focus,
+fieldset[disabled] .btn-danger:focus,  
+.btn-danger.disabled:active,
+.btn-danger[disabled]:active,
+fieldset[disabled] .btn-danger:active,  
+.btn-danger.disabled.active,
+.btn-danger[disabled].active,
+fieldset[disabled] .btn-danger.active {  
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+.btn-danger .badge {
+  color: #d9534f;
+  background-color: #fff;
+}
+.btn-link {
+  font-weight: normal;
+  color: #428bca;
+  cursor: pointer;
+  border-radius: 0;
+}
+.btn-link,
+.btn-link:active,
+.btn-link[disabled],
+fieldset[disabled] .btn-link {  
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.btn-link,
+.btn-link:hover,
+.btn-link:focus,
+.btn-link:active {
+  border-color: transparent;
+}
+.btn-link:hover,
+.btn-link:focus {
+  color: #2a6496;
+  text-decoration: underline;
+  background-color: transparent;
+}
+.btn-link[disabled]:hover,
+fieldset[disabled] .btn-link:hover,  
+.btn-link[disabled]:focus,
+fieldset[disabled] .btn-link:focus {  
+  color: #999;
+  text-decoration: none;
+}
+.btn-lg,
+.btn-group-lg > .btn {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
+.btn-sm,
+.btn-group-sm > .btn {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+.btn-xs,
+.btn-group-xs > .btn {
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+.btn-block {
+  display: block;
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+}
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
+input[type="submit"].btn-block,  
+input[type="reset"].btn-block,  
+input[type="button"].btn-block {  
+  width: 100%;
+}
