--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,27 @@ header{
 }
 
 .aligner-item{
-	max-width: 30%;
+	max-width: 70%;
+	display: flex;
+	justify-content: center;
+}
+
+.intro{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	background-color: #f3ffe2;
+	border-radius: 15px;
+	padding: 35px;
+
+}
+
+.intro h2{
+	font-size: 30px;
+	color: #6d4532;
+	font-weight: bold;
+	padding: 5px;
 }
 
 #start{
@@ -76,9 +96,10 @@ header{
 	flex-direction: column;
 
 	background-color: #FC913A;
-	/*justify-content: center;
-	align-items: center;*/
+	justify-content: center;
+	align-self: center;
 	border-radius: 50px;
+	margin-top: 20px;
 }
 #start h1{
 
@@ -90,6 +111,11 @@ header{
 	padding: 15px;
 
 
+}
+
+#start a{
+	text-decoration: none;
+	cursor: pointer;
 }
 #startScreen, #location, #cuisines{
 	
@@ -154,10 +180,10 @@ button{
 	background-color: #f3ffe2;
 	border-width: 1.5px;
 	border-style: solid;
-	border-color: #FC913A;
+	border-color: #f3ffe2;
 	color: #FC913A;
 	width: 100px;
-	border-radius: 35px;
+	border-radius: 15px;
 	
 
 }
@@ -169,9 +195,9 @@ button{
 .btn-submit:focus,
 .btn-submit:visited	{
 
-		color: #FC913A;
+		color: #f3ffe2;
 		background-color: #FC913A;
-		border-color: #FC913A;
+		border-color: #f3ffe2;
 
 }
 
@@ -181,6 +207,8 @@ button{
 	border-style: solid;
 	background-color: #FC913A;
 	color: #f3ffe2;
+	width: 100px;
+	border-radius: 15px;
 }
 
 .btn-submit-alt:hover, 
@@ -188,9 +216,9 @@ button{
 .btn-submit-alt:focus,
 .btn-submi-alt:visited	{
 
-		color: #f3ffe2;
+		color: #FC913A;
 		background-color: #f3ffe2;
-		border-color: #f3ffe2;
+		border-color: #FC913A;
 
 }
 
@@ -283,7 +311,7 @@ button{
 	width: 100px;
 	height: 100px;
 	
-	border-radius: 35px;
+	border-radius: 15px;
 	text-align: center;
 	
 	border-style: solid;
@@ -300,6 +328,7 @@ button{
 .unpicked{
 	background-color: #f3ffe2;
 	color: #FC913A;
+	text-decoration: line-through;
 }
 
 
@@ -344,65 +373,155 @@ button{
 	border-color: #6d4532;
 }
 
+.priceUnpicked{
+	background-color: #FC913A;
+	color: #f3ffe2;
+
+	
+}
+
+.pricePicked{
+	background-color: #f3ffe2;
+	color: #FC913A;
+	text-decoration: line-through;
+	
+	
+}
+
+
+#results{
+	margin-top: 0px;
+}
 #resultsInfo{
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	margin-top: 15px;
+	justify-content: space-around;
+
+	margin: 0;
+	padding: 0;
+	
+	
 
 }
 
 #resultsInfo div {
-	display: flex;
+	
 	height: 525px;
+	width: 400px;
+
+	
+
+
 
 	
 
 }
-#result1{
+#result1, #results1Back{
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
 	background-color: #f3ffe2;
 	margin: 10px;
-	border-radius: 35px;
+	border-radius: 15px;
+	
+
 }
 
-#result2{
+#result2, #results2Back{
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
 	background-color: #f3ffe2;
 	margin: 10px;
-	border-radius: 35px;
+	border-radius: 15px;
+	
+	
 }
 
-#result3{
+#result3, #results3Back{
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
 	background-color: #f3ffe2;
 	margin: 10px;
-	border-radius: 35px;
+	border-radius: 15px;
+	
+	
 }
 
+#results1Back.back{
+	background-color: red;
+}
+
+.flipper{
+	display: flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-box;
+	display: -webkit-flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	height: 525px;
+	width: 100%;
+	margin: 0px;
+	margin-left: -20px;
+	padding: 0px;
+
+
+}
+
+/*.card-front,
+.card-back {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 0px;
+	margin: 0;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+	justify-content: flex-end;
+}
+
+.card-back{
+	-webkit-transform: rotateY(-180deg);
+	transform: rotateY(-180deg);
+}
+
+.flex-item:hover .card-front {
+	-webkit-transform: rotateY(-180deg);
+	transform: rotateY(-180deg);
+}
+.flex-item:hover .card-back {
+	-webkit-transform: rotateY(0);
+	transform: rotateY(0);
+}
+
+*/
 .restaurant-image{
-	width: 100%;
-	height: auto;
-	margin-top: 40px;
+    width: 100%;
+    height: auto;
+    border-top: 20px solid #f3ffe2;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
 	
 	/*border: 3px solid black;*/
 }
 
 .restaurant-title,
 .restaurant-price,
-.restaurant-rating{
+.restaurant-rating,
+.restaurant-address{
 	text-align: center;
 	padding: 10px 0px 10px 0px;
 	color: #6d4532;
@@ -414,54 +533,21 @@ button{
 	font-weight: bold;
 }
 
-/* entire container, keeps perspective */
-
-.flip-container {
-	perspective: 1000px;
+.restaurant-address{
+	font-size: 18px;
+	padding: 10px;
 }
 
-/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
 
-/* flip the pane when hovered */
-
-.flip-container, .front, .back {
-	width: 33.333%;
+.back{
+	width: 100%;
 	height: 525px;
-}
-
-/* flip speed goes here */
-.flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
-	position: relative;
-}
-
-/* hide back of pane during swap */
-.front, .back{
-	backface-visibility: hidden;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-
-/* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
-}
-
-/* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
-}
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #f3ffe2;
+	margin: 10px;
+	border-radius: 15px;
 
 /*.grumbleHeader{
 	background-color: #FC913A;
