--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ button{
 
 #resultsInfo div {
 	
-	height: 525px;
+	/*height: 525px;*/
 	width: 400px;
 
 	
@@ -459,6 +459,8 @@ button{
 #results1Back.back{
 	background-color: red;
 }
+
+
 
 .flipper{
 	display: flex;
@@ -548,6 +550,8 @@ button{
 	background-color: #f3ffe2;
 	margin: 10px;
 	border-radius: 15px;
+
+
 
 /*.grumbleHeader{
 	background-color: #FC913A;
